# 2022.1_G3_Funcional_ProjetoPacman

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  ProjetoPacman.cabal  README.md  presentationScript.md
app/: AEstrela.hs  Bfs.hs  Coin.hs  Djikstra.hs  End.hs  Game.hs  Ghost.hs  Main.hs  Map.hs  Menu.hs  Player.hs  Scoreboard.hs  Startup.hs  Types.hs  Utils.hs  dfs.hs
app/Algorithms/: AEstrela.hs  Bfs.hs  Dfs.hs  Djikstra.hs
app/Game/: Coin.hs  Game.hs  Ghost.hs  Map.hs  Player.hs  Startup.hs
app/Screens/: End.hs  Menu.hs  Scoreboard.hs
