cabal-version:      2.4
name:               x20221-G3-Funcional-ProjetoPacman
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Joao-Moura
maintainer:         jaummoura15@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable x20221-G3-Funcional-ProjetoPacman
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Utils, Game, Map, Types, Player, Coin, Ghost

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13.2.0, gloss>=1.10, heap
    hs-source-dirs:   app
    default-language: Haskell2010
